# ticketing

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  QUICKSTART.md  README.md  SETUP.md  Tiltfile  docker-compose.yml
.github/workflows/: ci.yml
TODO/: ARCHITECTURE.md  Phase-1-Architecture-Infrastructure.md  Phase-1-K8s-DynamoDB.md  Phase-10-Final-Review.md  Phase-2-Auth-Events.md  Phase-3-Inventory-DynamoDB.md  Phase-3-Inventory-Service.md  Phase-4-Booking-Payment.md  Phase-5-Search-Indexing.md  Phase-6-Notification.md  Phase-7-React-Frontend.md  Phase-8-Testing-QA.md  Phase-9-Documentation.md  README-PRODUCTION.md  README.md
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  FRONTEND_PRD.md  OPTIMIZATION_GUIDE.md  TESTING.md  TICKETMASTER_PRO_FEATURES.md  USER_GUIDE.md  WIREFRAME_GUIDE.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/e2e/: auth.spec.ts  event-search.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: EventCard.tsx  SeatSelection.tsx
frontend/src/components/__tests__/: EventCard.test.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CheckoutCompletePage.tsx  CheckoutPage.tsx  EventDetailPage.tsx  HomePage.tsx  QueuePage.tsx  SearchPage.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  AdminEventNew.tsx
frontend/src/services/: authService.ts  bookingService.ts  eventService.ts  paymentService.ts  queueService.ts
frontend/src/store/: authStore.ts  cartStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
k8s/: README.md  kustomization.yaml
k8s/base/: configmap.yaml  namespace.yaml  networkpolicy.yaml  serviceaccount.yaml
k8s/ingress/: ingress.yaml
k8s/local/: README.md  api-gateway.yaml  auth-service.yaml  booking-service.yaml  configmap.yaml  dynamodb.yaml  events-service.yaml  frontend.yaml  inventory-service.yaml  kafka.yaml  namespace.yaml  notification-service.yaml  opensearch.yaml  payment-service.yaml  postgres.yaml  redis.yaml  search-service.yaml  secrets.yaml
k8s/monitoring/: README.md  datadog-agent.yaml  deploy.sh  loki-values.yaml  prometheus-values.yaml  servicemonitors.yaml
k8s/services/: api-gateway.yaml  auth-service.yaml  booking-service.yaml  events-service.yaml  inventory-service.yaml  notification-service.yaml  payment-service.yaml  search-service.yaml
scripts/: init-dynamodb.sh
services/api-gateway/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/api-gateway/app/: main.py
services/api-gateway/tests/: test_main.py
services/auth/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/auth/app/: auth.py  db.py  main.py  models.py  schemas.py
services/auth/app/routers/: auth.py
services/auth/tests/: test_auth.py
services/booking/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/booking/app/: __init__.py  dynamodb.py  grpc_client.py  kafka_producer.py  main.py  schemas.py
services/booking/app/routers/: booking.py
services/booking/tests/: test_booking.py
services/events/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/events/app/: __init__.py  db.py  main.py  models.py  schemas.py  search.py
services/events/tests/: test_events.py
services/inventory/: .env.example  Dockerfile  README.md  go.mod  go.sum
services/inventory/proto/: inventory.pb.go  inventory.proto  inventory_grpc.pb.go
services/notification/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/notification/app/: main.py
services/payment/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/payment/app/: __init__.py  main.py  schemas.py  stripe_service.py
services/payment/tests/: test_payment.py
services/search/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/search/app/: main.py
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/environments/dev/: terraform.tfvars
terraform/environments/prod/: terraform.tfvars
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/msk/: main.tf  outputs.tf  variables.tf
terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  variables.tf
terraform/modules/redis/: main.tf  outputs.tf  variables.tf
(+17 files in other folders)
